# nycbridges

./: .gitignore  LICENSE  README.md  package-lock.json  style.json
data/: CONSTANTS.py  README.md  getAllActivities.py  prepareBridges.py  processActivities.py  pyproject.toml  utils.py
data/bridges/: bridges_lines.geojson  bridges_midpoints.geojson  chart_data.csv
data/processed_activities/: george-washington.geojson  kosciuszko.geojson  pulaski.geojson  queensboro.geojson  williamsburg.geojson
nycbridges/: README.md  package-lock.json  package.json
nycbridges/src/: global.css
nycbridges/src/lib/assets/: map-style.json
nycbridges/src/lib/components/: BridgeTable.svelte  Chart.svelte  Map.svelte  TableChartCombo.svelte
nycbridges/src/lib/stores/: selection.svelte.js
nycbridges/src/routes/: +layout.svelte  +page.svelte
nycbridges/static/data/: bridges_midpoints.geojson  bridges_points.geojson
